<resources>
    <string name="app_name">Yaaa</string>
    <string name="app_hour_format">h:mm a</string>
    <string name="app_date_format">EEE\',\' MMM d\',\' yyyy</string>
    <string name="unknown_location">Unknown Location</string>
    <string name="appointments_title">Appointments</string>
    <string name="appointments_retry">Retry</string>
    <string name="appointments_new">Add Appointment</string>
    <string name="appointments_placeholder">No appointments, tap the \"+ Add Appointment\" button to create one.</string>
    <string name="appointments_error_fetching_appointments">Error fetching appointments, please try again.</string>
    <string name="appointments_menu_edit_locations">Edit locations</string>
    <string name="appointments_menu_share_logs">Share logs</string>
    <string name="appointment_creation_title">New Appointment</string>
    <string name="appointment_creation_title_edition">Edit Appointment</string>
    <string name="appointment_description_hint">Description</string>
    <string name="appointment_location_hint">Location:</string>
    <string name="appointment_date_hint">Date and time:</string>
    <string name="appointment_select_date">Select date</string>
    <string name="appointment_select_time">Select time</string>
    <string name="appointment_save_create">Create Appointment</string>
    <string name="appointment_save_update">Update Appointment</string>
    <string name="appointment_saved">Appointment saved.</string>
    <string name="appointment_saved_leave_edition">Finish edition</string>
    <string name="appointment_delete">Cancel Appointment</string>
    <string name="appointment_deleted">Appointment canceled.</string>
    <string name="appointment_deleted_undo">Undo</string>
    <string name="appointment_error_failed_to_delete">Failed to delete appointment.</string>
    <string name="appointment_error_fetching_locations">Error fetching locations.</string>
    <string name="appointment_error_fetching_appointment">Error fetching appointment.</string>
    <string name="appointment_error_invalid_location">Invalid location.</string>
    <string name="appointment_error_failed_to_save">Failed to save appointment.</string>
    <string name="shortcut_appointments">Appointments</string>
    <string name="shortcut_create_appointment">Create Appointment</string>
    <string name="shortcut_edit_locations">Edit Locations</string>
    <string name="locations_title">Locations</string>
    <string name="locations_placeholder">No locations, tap the \"+ Add Location\" button to create one.</string>
    <string name="locations_new">Add Location</string>
    <string name="locations_delete">Delete Location</string>
    <string name="locations_error_fetching_locations">Error fetching locations.</string>
    <string name="add_location_title">Add Location</string>
    <string name="add_location_title_edition">Edit Location</string>
    <string name="add_location_name_hint">Location Name</string>
    <string name="add_location_save">Save Location</string>
    <string name="add_location_saved">Location saved.</string>
    <string name="add_location_saved_leave_edition">Finish edition</string>
    <string name="add_location_saved_failed_action">Back to edition</string>
    <string name="add_location_cancel">Cancel</string>
    <string name="add_location_error_invalid_name">Invalid location name.</string>
    <string name="add_location_error_failed_to_save">Failed to save location.</string>
    <string name="add_location_delete_last">It is not possible to delete the last location.</string>
    <string name="add_location_delete_error">Failed to delete location.</string>
    <string name="add_location_delete_success">Location deleted.</string>
    <string name="add_location_delete_success_undo">Undo</string>
    <string name="add_location_delete_success_undo_success">Location was added back</string>
    <string name="add_location_delete_success_undo_error">Undo error</string>
    <string name="add_location_edition_error">Failed to edit location.</string>
    <string name="add_location_edition_success">Location edited.</string>
    <string name="share_logs_title">Share logs</string>
    <string name="share_logs_message">Please share the logs with the developer to help him fix the issue.</string>
</resources>